# cs440-project

./: .gitignore  README.md  main.py  pyproject.toml
data/: dataset.csv
src/: association.py  classification.py  clustering.py  data_processing.py  eda.py
